--- a/views/pages/catalog.ejs
+++ b/views/pages/catalog.ejs
@@ -69,7 +69,13 @@
           <div class="product-info">
             <h3 class="product-title"><%= product.name %></h3>
             <div class="product-price"><%= product.price.toLocaleString() %> ₽</div>
-            <button class="add-to-cart">В корзину</button>
+            <button class="add-to-cart" 
+        data-id="<%= product.id %>"
+        data-name="<%= product.name %>"
+        data-price="<%= product.price %>"
+        data-image="<%= product.image || '/images/placeholder.jpg' %>">
+  В корзину
+</button>
           </div>
         </div>
       <% }) %>
