--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,6 +17,7 @@
           <a href="/catalog">Каталог</a>
           <a href="#">О нас</a>
           <a href="#">Контакты</a>
+          <a href="/auth/login" class="login-link">Войти</a>
         </div>
         <a href="/cart" class="cart-icon">
           🛒
