--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,11 +17,21 @@
           <a href="/catalog">Каталог</a>
           <a href="#">О нас</a>
           <a href="#">Контакты</a>
-          <a href="/auth/login" class="login-link">Войти</a>
+          <% if (user) { %>
+            <a href="/profile" class="user-profile">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 12C14.7614 12 17 9.76142 17 7C17 4.23858 14.7614 2 12 2C9.23858 2 7 4.23858 7 7C7 9.76142 9.23858 12 12 12Z" fill="currentColor"/>
+                <path d="M12 14C7.58172 14 4 17.5817 4 22H20C20 17.5817 16.4183 14 12 14Z" fill="currentColor"/>
+              </svg>
+              <span>Личный кабинет</span>
+            </a>
+          <% } else { %>
+            <a href="/auth/login" class="login-link">Войти</a>
+          <% } %>
         </div>
         <a href="/cart" class="cart-icon">
           🛒
-          <span class="cart-count">0</span>
+          <span class="cart-count"><%= cartCount || 0 %></span>
         </a>
       </nav>
     </div>
